@@ -360,6 +360,9 @@ lib32_SCRIPTS = \
   lib32/libwinstrm.a   lib32/libwldap32.a   lib32/libwow32.a     lib32/libwsnmp32.a   \
   lib32/libwsock32.a   lib32/libwst.a       lib32/libwtsapi32.a  lib32/libnormaliz.a \
   \
+  lib32/libgpapi.a lib32/libgpedit.a lib32/libgpprefcl.a lib32/libgpscript.a \
+  lib32/libgptext.a \
+  \
   lib32/libcrtdll.a    lib32/libmsvcrt.a   lib32/libmsvcr80.a
 
 # combine these two rules with the ones for lib64
