@@ -1,0 +1,33 @@
+;
+; Definition file of GPAPI.dll
+; Automatic generated by gendef
+; written by Kai Tietz 2008
+;
+LIBRARY "GPAPI.dll"
+EXPORTS
+ord_105@20 @105
+EnterCriticalPolicySectionInternal@4
+ord_107@8 @107
+ForceSyncFgPolicyInternal@4
+ord_109@12 @109
+ord_110@12 @110
+ord_111@8 @111
+FreeGPOListInternalA@4
+ord_113@12 @113
+ord_114@16 @114
+ord_115@20 @115
+FreeGPOListInternalW@4
+GetAppliedGPOListInternalA@20
+GetAppliedGPOListInternalW@20
+GetGPOListInternalA@4
+GetGPOListInternalW@24
+GetNextFgPolicyRefreshInfoInternal@8
+GetPreviousFgPolicyRefreshInfoInternal@8
+LeaveCriticalPolicySectionInternal@4
+RefreshPolicyExInternal@8
+RefreshPolicyInternal@4
+RegisterGPNotificationInternal@8
+RsopLoggingEnabledInternal
+UnregisterGPNotificationInternal@4
+WaitForMachinePolicyForegroundProcessingInternal
+WaitForUserPolicyForegroundProcessingInternal
