@@ -1,0 +1,20 @@
+;
+; Definition file of GPEDIT.DLL
+; Automatic generated by gendef
+; written by Kai Tietz 2008
+;
+LIBRARY "GPEDIT.DLL"
+EXPORTS
+ord_100@8 @100
+ord_101@4 @101
+ord_102 @102
+ord_103@12 @103
+ord_104@12 @104
+BrowseForGPO@8
+CreateGPOLink@12
+DeleteAllGPOLinks@4
+DeleteGPOLink@8
+DllCanUnloadNow
+DllGetClassObject@12
+ExportRSoPData@8
+ImportRSoPData@8
