@@ -1,0 +1,74 @@
+;
+; Definition file of polprocl.dll
+; Automatic generated by gendef
+; written by Kai Tietz 2008
+;
+LIBRARY "polprocl.dll"
+EXPORTS
+DllCanUnloadNow
+DllGetClassObject@12
+DllRegisterServer
+DllUnregisterServer
+GenerateGroupPolicyApplications@20
+GenerateGroupPolicyDataSources@20
+GenerateGroupPolicyDevices@20
+GenerateGroupPolicyDrives@20
+GenerateGroupPolicyEnviron@20
+GenerateGroupPolicyFiles@20
+GenerateGroupPolicyFolderOptions@20
+GenerateGroupPolicyFolders@20
+GenerateGroupPolicyIniFile@20
+GenerateGroupPolicyInternet@20
+GenerateGroupPolicyLocUsAndGroups@20
+GenerateGroupPolicyNetShares@20
+GenerateGroupPolicyNetworkOptions@20
+GenerateGroupPolicyPowerOptions@20
+GenerateGroupPolicyPrinters@20
+GenerateGroupPolicyRegionOptions@20
+GenerateGroupPolicyRegistry@20
+GenerateGroupPolicySchedTasks@20
+GenerateGroupPolicyServices@20
+GenerateGroupPolicyShortcuts@20
+GenerateGroupPolicyStartMenu@20
+ProcessGroupPolicyApplications@32
+ProcessGroupPolicyDataSources@32
+ProcessGroupPolicyDevices@32
+ProcessGroupPolicyDrives@32
+ProcessGroupPolicyEnviron@32
+ProcessGroupPolicyExApplications@40
+ProcessGroupPolicyExDataSources@40
+ProcessGroupPolicyExDevices@40
+ProcessGroupPolicyExDrives@40
+ProcessGroupPolicyExEnviron@40
+ProcessGroupPolicyExFiles@40
+ProcessGroupPolicyExFolderOptions@40
+ProcessGroupPolicyExFolders@40
+ProcessGroupPolicyExIniFile@40
+ProcessGroupPolicyExInternet@40
+ProcessGroupPolicyExLocUsAndGroups@40
+ProcessGroupPolicyExNetShares@40
+ProcessGroupPolicyExNetworkOptions@40
+ProcessGroupPolicyExPowerOptions@40
+ProcessGroupPolicyExPrinters@40
+ProcessGroupPolicyExRegionOptions@40
+ProcessGroupPolicyExRegistry@40
+ProcessGroupPolicyExSchedTasks@40
+ProcessGroupPolicyExServices@40
+ProcessGroupPolicyExShortcuts@40
+ProcessGroupPolicyExStartMenu@40
+ProcessGroupPolicyFiles@32
+ProcessGroupPolicyFolderOptions@32
+ProcessGroupPolicyFolders@32
+ProcessGroupPolicyIniFile@32
+ProcessGroupPolicyInternet@32
+ProcessGroupPolicyLocUsAndGroups@32
+ProcessGroupPolicyNetShares@32
+ProcessGroupPolicyNetworkOptions@32
+ProcessGroupPolicyPowerOptions@32
+ProcessGroupPolicyPrinters@32
+ProcessGroupPolicyRegionOptions@32
+ProcessGroupPolicyRegistry@32
+ProcessGroupPolicySchedTasks@32
+ProcessGroupPolicyServices@32
+ProcessGroupPolicyShortcuts@32
+ProcessGroupPolicyStartMenu@32
