@@ -1,0 +1,11 @@
+;
+; Definition file of GPSCRIPT.DLL
+; Automatic generated by gendef
+; written by Kai Tietz 2008
+;
+LIBRARY "GPSCRIPT.DLL"
+EXPORTS
+GenerateScriptsGroupPolicy@20
+ProcessScriptsGroupPolicy@32
+ProcessScriptsGroupPolicyEx@40
+ScrRegGPOListToWbem@8
